# Fridge-monitor

./: CMakeLists.txt  LICENSE  README.rst  adafruit_feather_nrf52840.overlay  prj.conf
src/: callbacks.c  callbacks.h  consts.h  hardware.c  hardware.h  main.c  temperatureMonitor.c  temperatureMonitor.h
